// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
<<<<<<< HEAD
      "children": Array [
        false,
        <Redirect
          push={false}
          to="/"
        />,
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />,
        <Route
          component={[Function]}
          path="/app"
        />,
      ],
      "className": "App",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "push": false,
          "to": "/",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "exact": true,
          "path": "/",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "path": "/app",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
=======
      "children": <main
        className="App"
      >
        <t
          accessType="online"
          buttonText="Login w/ Google"
          clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
          cookiePolicy="single_host_origin"
          disabledStyle={
            Object {
              "opacity": 0.6,
            }
          }
          fetchBasicProfile={true}
          isSignedIn={false}
          jsSrc="https://apis.google.com/js/client:platform.js"
          onFailure={[Function]}
          onRequest={[Function]}
          onSuccess={[Function]}
          prompt=""
          scope="profile email"
          tag="button"
          type="button"
          uxMode="popup"
        />
      </main>,
    },
    "ref": null,
    "rendered": Object {
>>>>>>> e1e007e4bde1c2ecd57cf59cddb8d93fd460edf5
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <Redirect
            push={false}
            to="/"
          />,
          <Route
            component={[Function]}
            exact={true}
            path="/"
          />,
          <Route
            component={[Function]}
            path="/app"
          />,
<<<<<<< HEAD
=======
          null,
          false,
          null,
>>>>>>> e1e007e4bde1c2ecd57cf59cddb8d93fd460edf5
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "push": false,
            "to": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "exact": true,
            "path": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "path": "/app",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
<<<<<<< HEAD
=======
        null,
        false,
        null,
>>>>>>> e1e007e4bde1c2ecd57cf59cddb8d93fd460edf5
      ],
      "type": "main",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <main
          className="App"
        >
          <t
            accessType="online"
            buttonText="Login w/ Google"
            clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
            cookiePolicy="single_host_origin"
            disabledStyle={
              Object {
                "opacity": 0.6,
              }
            }
            fetchBasicProfile={true}
            isSignedIn={false}
            jsSrc="https://apis.google.com/js/client:platform.js"
            onFailure={[Function]}
            onRequest={[Function]}
            onSuccess={[Function]}
            prompt=""
            scope="profile email"
            tag="button"
            type="button"
            uxMode="popup"
          />
        </main>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <t
              accessType="online"
              buttonText="Login w/ Google"
              clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
              cookiePolicy="single_host_origin"
              disabledStyle={
                Object {
                  "opacity": 0.6,
                }
              }
              fetchBasicProfile={true}
              isSignedIn={false}
              jsSrc="https://apis.google.com/js/client:platform.js"
              onFailure={[Function]}
              onRequest={[Function]}
              onSuccess={[Function]}
              prompt=""
              scope="profile email"
              tag="button"
              type="button"
              uxMode="popup"
            />,
            null,
            false,
            null,
          ],
          "className": "App",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessType": "online",
              "buttonText": "Login w/ Google",
              "clientId": "241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com",
              "cookiePolicy": "single_host_origin",
              "disabledStyle": Object {
                "opacity": 0.6,
              },
              "fetchBasicProfile": true,
              "isSignedIn": false,
              "jsSrc": "https://apis.google.com/js/client:platform.js",
              "onFailure": [Function],
              "onRequest": [Function],
              "onSuccess": [Function],
              "prompt": "",
              "scope": "profile email",
              "tag": "button",
              "type": "button",
              "uxMode": "popup",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          false,
          null,
        ],
        "type": "main",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`App should match snapshot when displaySidebar is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
<<<<<<< HEAD
      "children": Array [
        false,
        <Redirect
          push={false}
          to="/"
        />,
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />,
        <Route
          component={[Function]}
          path="/app"
        />,
      ],
      "className": "App",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
=======
      "children": <main
        className="App"
      >
        <t
          accessType="online"
          buttonText="Login w/ Google"
          clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
          cookiePolicy="single_host_origin"
          disabledStyle={
            Object {
              "opacity": 0.6,
            }
          }
          fetchBasicProfile={true}
          isSignedIn={false}
          jsSrc="https://apis.google.com/js/client:platform.js"
          onFailure={[Function]}
          onRequest={[Function]}
          onSuccess={[Function]}
          prompt=""
          scope="profile email"
          tag="button"
          type="button"
          uxMode="popup"
        />
        <Connect(NavBar) />
      </main>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <t
            accessType="online"
            buttonText="Login w/ Google"
            clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
            cookiePolicy="single_host_origin"
            disabledStyle={
              Object {
                "opacity": 0.6,
              }
            }
            fetchBasicProfile={true}
            isSignedIn={false}
            jsSrc="https://apis.google.com/js/client:platform.js"
            onFailure={[Function]}
            onRequest={[Function]}
            onSuccess={[Function]}
            prompt=""
            scope="profile email"
            tag="button"
            type="button"
            uxMode="popup"
          />,
          null,
          <Connect(NavBar) />,
          null,
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessType": "online",
            "buttonText": "Login w/ Google",
            "clientId": "241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com",
            "cookiePolicy": "single_host_origin",
            "disabledStyle": Object {
              "opacity": 0.6,
            },
            "fetchBasicProfile": true,
            "isSignedIn": false,
            "jsSrc": "https://apis.google.com/js/client:platform.js",
            "onFailure": [Function],
            "onRequest": [Function],
            "onSuccess": [Function],
            "prompt": "",
            "scope": "profile email",
            "tag": "button",
            "type": "button",
            "uxMode": "popup",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": "main",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <main
          className="App"
        >
          <t
            accessType="online"
            buttonText="Login w/ Google"
            clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
            cookiePolicy="single_host_origin"
            disabledStyle={
              Object {
                "opacity": 0.6,
              }
            }
            fetchBasicProfile={true}
            isSignedIn={false}
            jsSrc="https://apis.google.com/js/client:platform.js"
            onFailure={[Function]}
            onRequest={[Function]}
            onSuccess={[Function]}
            prompt=""
            scope="profile email"
            tag="button"
            type="button"
            uxMode="popup"
          />
          <Connect(NavBar) />
        </main>,
      },
      "ref": null,
      "rendered": Object {
>>>>>>> e1e007e4bde1c2ecd57cf59cddb8d93fd460edf5
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "push": false,
          "to": "/",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
<<<<<<< HEAD
          "component": [Function],
          "exact": true,
          "path": "/",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "component": [Function],
          "path": "/app",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
=======
          "children": Array [
            <t
              accessType="online"
              buttonText="Login w/ Google"
              clientId="241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com"
              cookiePolicy="single_host_origin"
              disabledStyle={
                Object {
                  "opacity": 0.6,
                }
              }
              fetchBasicProfile={true}
              isSignedIn={false}
              jsSrc="https://apis.google.com/js/client:platform.js"
              onFailure={[Function]}
              onRequest={[Function]}
              onSuccess={[Function]}
              prompt=""
              scope="profile email"
              tag="button"
              type="button"
              uxMode="popup"
            />,
            null,
            <Connect(NavBar) />,
            null,
          ],
          "className": "App",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessType": "online",
              "buttonText": "Login w/ Google",
              "clientId": "241779944002-qa42v6cvk3kpu8da0jimdr364vn41t1r.apps.googleusercontent.com",
              "cookiePolicy": "single_host_origin",
              "disabledStyle": Object {
                "opacity": 0.6,
              },
              "fetchBasicProfile": true,
              "isSignedIn": false,
              "jsSrc": "https://apis.google.com/js/client:platform.js",
              "onFailure": [Function],
              "onRequest": [Function],
              "onSuccess": [Function],
              "prompt": "",
              "scope": "profile email",
              "tag": "button",
              "type": "button",
              "uxMode": "popup",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": "main",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
>>>>>>> e1e007e4bde1c2ecd57cf59cddb8d93fd460edf5
      },
    },
  },
}
`;

exports[`App should match snapshot when user is logged in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App
    loginUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <main
        className="App"
      >
        <i
          class="fas fa-bars streets"
          onClick={[Function]}
        />
        <div
          className="main-container"
        >
          <div
            className="toggle-map-style"
          >
            <button
              className="streets-button"
              onClick={[Function]}
            />
          </div>
          <Routes
            mapStyle="streets"
          />
        </div>
      </main>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
<<<<<<< HEAD
          <Redirect
            push={false}
            to="/"
          />,
          <Route
            component={[Function]}
            exact={true}
            path="/"
          />,
          <Route
            component={[Function]}
            path="/app"
          />,
=======
          <i
            class="fas fa-bars streets"
            onClick={[Function]}
          />,
          false,
          <div
            className="main-container"
          >
            <div
              className="toggle-map-style"
            >
              <button
                className="streets-button"
                onClick={[Function]}
              />
            </div>
            <Routes
              mapStyle="streets"
            />
          </div>,
>>>>>>> e1e007e4bde1c2ecd57cf59cddb8d93fd460edf5
        ],
        "className": "App",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "push": false,
            "to": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
<<<<<<< HEAD
            "component": [Function],
            "exact": true,
            "path": "/",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "component": [Function],
            "path": "/app",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
=======
            "class": "fas fa-bars streets",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="toggle-map-style"
              >
                <button
                  className="streets-button"
                  onClick={[Function]}
                />
              </div>,
              <Routes
                mapStyle="streets"
              />,
            ],
            "className": "main-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="streets-button"
                  onClick={[Function]}
                />,
                "className": "toggle-map-style",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "streets-button",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "gid": undefined,
                "mapStyle": "streets",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
>>>>>>> e1e007e4bde1c2ecd57cf59cddb8d93fd460edf5
        },
      ],
      "type": "main",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <main
          className="App"
        >
          <i
            class="fas fa-bars streets"
            onClick={[Function]}
          />
          <div
            className="main-container"
          >
            <div
              className="toggle-map-style"
            >
              <button
                className="streets-button"
                onClick={[Function]}
              />
            </div>
            <Routes
              mapStyle="streets"
            />
          </div>
        </main>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <i
              class="fas fa-bars streets"
              onClick={[Function]}
            />,
            false,
            <div
              className="main-container"
            >
              <div
                className="toggle-map-style"
              >
                <button
                  className="streets-button"
                  onClick={[Function]}
                />
              </div>
              <Routes
                mapStyle="streets"
              />
            </div>,
          ],
          "className": "App",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "class": "fas fa-bars streets",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="toggle-map-style"
                >
                  <button
                    className="streets-button"
                    onClick={[Function]}
                  />
                </div>,
                <Routes
                  mapStyle="streets"
                />,
              ],
              "className": "main-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <button
                    className="streets-button"
                    onClick={[Function]}
                  />,
                  "className": "toggle-map-style",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "streets-button",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "button",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "gid": undefined,
                  "mapStyle": "streets",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "main",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
